# COSMIC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_INSTRUCTIONS.md  __init__.py  cluster_analysis.py  clustering.py  data_loader.py  data_preprocessor.py  pyproject.toml  requirements.txt  utils.py
cosmic/: __init__.py
cosmic/analysis/: __init__.py  _clipping.py  _io.py  _plots.py  _sagitta.py  analyzer.py
cosmic/core/: __init__.py  _constants.py  _estimator.py  _plots.py  _search.py  _style.py  _summary.py  clustering.py
cosmic/io/: __init__.py  _constants.py  _helpers.py  loader.py
cosmic/preprocess/: __init__.py  _constants.py  _helpers.py  preprocessor.py
cosmic/utils/: __init__.py  utils.py
legacy/: cluster_analysis.py  clustering.py  data_loader.py  data_preprocessor.py
notebooks/: TEST.ipynb  Untitled.ipynb
notebooks/root_snapshots/: TEST_root.ipynb  Untitled_root.ipynb
scripts/: release.sh
tests/: __init__.py  test_clustering.py  test_data_loader.py  test_preprocessor.py  test_utils.py
