[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-cluster-analysis"
version = "0.1.0"
description = "COSMIC: clustering and analysis utilities for Gaia-based star cluster studies"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Lucas Pulgar-Escobar"},
  {name = "Nicolás Henríquez Salgado"}
]
dependencies = [
  "hdbscan>=0.8.40",
  "optuna>=4.5.0",
  "numpy>=1.23",
  "scipy>=1.10",
  "pandas>=1.5",
  "astropy>=6",
  "scikit-learn>=1.3",
  "tqdm>=4.65",
  "matplotlib>=3.7",
  "dill>=0.3.8",
  "adjusttext>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/yourusername/COSMIC"

[tool.setuptools]
py-modules = [
  "clustering",
  "cluster_analysis",
  "data_loader",
  "data_preprocessor",
  "utils",
]

[tool.setuptools.packages.find]
include = ["cosmic*"]
exclude = ["legacy*", "tests*", "notebooks*", "backups*", "data*"]
