[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-cluster-analysis"
version = "0.0.1"
description = "COSMIC: Characterization Of Star clusters using Machine-learning Inference and Clustering"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [
  {name = "Lucas Pulgar-Escobar", email = "lescobar2019@udec.cl"},
  {name = "Nicolás Henríquez Salgado"}
]
keywords = ["astronomy", "clustering", "gaia", "star-clusters", "machine-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "hdbscan>=0.8.40",
  "optuna>=4.5.0",
  "numpy>=1.23",
  "scipy>=1.10",
  "pandas>=1.5",
  "astropy>=6",
  "scikit-learn>=1.3",
  "tqdm>=4.65",
  "matplotlib>=3.7",
  "dill>=0.3.8",
  "adjusttext>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/notluquis/COSMIC"
Repository = "https://github.com/notluquis/COSMIC"
Issues = "https://github.com/notluquis/COSMIC/issues"
Changelog = "https://github.com/notluquis/COSMIC/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = [
  "clustering",
  "cluster_analysis",
  "data_loader",
  "data_preprocessor",
  "utils",
]

[tool.setuptools.packages.find]
include = ["cosmic*"]
exclude = ["legacy*", "tests*", "notebooks*", "backups*", "data*"]
